--- a/Questionnaire/FrontDesk/FrontDesk.Master
+++ b/Questionnaire/FrontDesk/FrontDesk.Master
@@ -7,13 +7,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
     <style>
-        body {
-            background-color:aliceblue;
+        .body {
+            background-color: aliceblue;
         }
+
         .auto-style1 {
             width: 79px;
             height: 73px;
         }
+
         .auto-style2 {
             width: 91px;
         }
@@ -21,14 +23,15 @@
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
-<body>
+<body class="body">
     <form id="form1" runat="server">
         <table width="100%">
             <tr>
-                <td class="auto-style2"><img src="../Pictures/75470.png" class="auto-style1"/></td>
+                <td class="auto-style2">
+                    <img src="../Pictures/75470.png" class="auto-style1" /></td>
                 <td>
-                    <a href="Index.aspx">首頁</a>
-                    <a href="Allquestionnaire.aspx">問卷總覽</a>
+                    <a href="Index.aspx">首頁</a>|
+                    <a href="Allquestionnaire.aspx">問卷管理</a>|
                 </td>
             </tr>
             <tr>
